--- a/Step4-Orchestrating-Services-with-Kubernetes/app/blog/infra/k8s/comments-depl.yaml
+++ b/Step4-Orchestrating-Services-with-Kubernetes/app/blog/infra/k8s/comments-depl.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: comments-depl
+  namespace: ingress-nginx
 spec:
   # 生成 pod 的数量
   replicas: 1
@@ -23,6 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: comments-clusterip-srv
+  namespace: ingress-nginx
 spec:
   # 默认为 type: ClusterIP 所以可以不用写
   # type: ClusterIP
