Fix ingress-nginx call 500 because use rewrite-target

--- a/Step4-Orchestrating-Services-with-Kubernetes/app/blog/infra/k8s/ingress-srv.yaml
+++ b/Step4-Orchestrating-Services-with-Kubernetes/app/blog/infra/k8s/ingress-srv.yaml
@@ -7,12 +7,10 @@ metadata:
     # kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    # service.beta.kubernetes.io/do-loadbalancer-hostname: "siriuszht.com"
 spec:
   ingressClassName: nginx
   rules:
-    - host: siriuszht.com
+    - host: www.demo.io
       http:
         paths:
           - pathType: Prefix
