Update Step15 NATS Listener & Publisher

--- a/Step15-Connect-To-NATS-In-A-NodeJS-World/ticketing/tickets/Dockerfile
+++ b/Step15-Connect-To-NATS-In-A-NodeJS-World/ticketing/tickets/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine
 
 WORKDIR /app
 COPY package.json .
-RUN npm config set registry https://registry.npmmirror.com/ && npm update && npm install --only=prod
+RUN npm config set registry https://registry.npmmirror.com/ && npm update && npm install -g --only=prod
 COPY . .
 
-CMD ["npm", "start"]
+CMD ["npm", "test"]
