--- a/Step15-Connect-To-NATS-In-A-NodeJS-World/ticketing/tickets/package.json
+++ b/Step15-Connect-To-NATS-In-A-NodeJS-World/ticketing/tickets/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --watchAll --no-cache"
+    "test": "jest --watchAll --no-cache --testTimeout=10000"
   },
   "jest": {
     "preset": "ts-jest",
